--- a/app/views/tickets/_tickets_container.html.erb
+++ b/app/views/tickets/_tickets_container.html.erb
@@ -2,6 +2,6 @@
   <% if @tickets.present? %>
     <%= render tickets %>
   <% else %>
-    <p>No tickets available.</p>
+    <p>Nenhum ticket disponível</p>
   <% end %>
 </div>
