--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,22 +1,22 @@
 <div class="bg-white rounded p-4 shadow-sm">
   <%= simple_form_for @event do |f| %>
     <div class="form-group">
-      <%= f.input :title, label: false, placeholder: 'Title', input_html: { class: 'form-control' } %>
+      <%= f.input :title, label: false, placeholder: 'Título', input_html: { class: 'form-control' } %>
     </div>
     <div class="form-group">
-      <%= f.input :location, label: false, placeholder: 'Location', input_html: { class: 'form-control' } %>
+      <%= f.input :location, label: false, placeholder: 'Local', input_html: { class: 'form-control' } %>
     </div>
     <div class="form-group">
-      <%= f.input :description, label: false, as: :text, placeholder: 'Description', input_html: { class: 'form-control' } %>
+      <%= f.input :description, label: false, as: :text, placeholder: 'Descrição', input_html: { class: 'form-control' } %>
     </div>
     <div class="form-group">
-      <%= f.input :date, label: false, as: :string, placeholder: 'Date', input_html: { data: { controller: "flatpickr" } } %>
+      <%= f.input :date, label: false, as: :string, placeholder: 'Data', input_html: { data: { controller: "flatpickr" } } %>
     </div>
     <div class="form-group">
       <%= f.input :photo, label: false, as: :file, input_html: { class: 'form-control-file' } %>
     </div>
     <div class="form-group text-center">
-      <%= f.button :submit, "Create Event", class: 'btn btn-primary' %>
+      <%= f.button :submit, "Criar Evento", class: 'btn btn-primary' %>
     </div>
   <% end %>
 </div>
