--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,14 +10,14 @@
       <div class="d-flex my-3 justify-content-between">
         <% if current_user %>
           <button type="button" class="btn btn-primary rounded me-1" data-bs-toggle="modal" data-bs-target="#sellTicketModal" style='width:100%'>
-            Sell
+            Vender
           </button>
           <button type="button" class="btn btn-primary rounded ms-1" data-bs-toggle="modal" data-bs-target="#buyTicketModal" style='width:100%' <%= @tickets_by_type.values.sum == 0 ? 'disabled' : '' %>>
-            Buy
+            Comprar
           </button>
         <% else %>
-          <%= link_to 'Sell', new_user_session_path, class: 'btn btn-primary rounded ms-1', style: 'width: 100%' %>
-          <%= link_to 'Buy', new_user_session_path, class: 'btn btn-primary rounded ms-1', style: 'width: 100%' %>
+          <%= link_to 'Vender', new_user_session_path, class: 'btn btn-primary rounded ms-1', style: 'width: 100%' %>
+          <%= link_to 'Comprar', new_user_session_path, class: 'btn btn-primary rounded ms-1', style: 'width: 100%' %>
         <% end %>
       </div>
 
@@ -32,11 +32,11 @@
         </div>
       </div>
 
-        <p class='fw-semibold'>Host: <%= @event.user.name %></p>
-        <p class='h6 fw-semibold'>Location: <%= @event.location %></p>
+        <p class='fw-semibold'>Anfitrião: <%= @event.user.name %></p>
+        <p class='h6 fw-semibold'>Local: <%= @event.location %></p>
         <p><%= @event.description %></p>
 
-        <%= link_to 'Back to events', events_path, class: 'btn btn-sm btn-outline-primary rounded mb-4' %>
+        <%= link_to 'Voltar aos eventos', events_path, class: 'btn btn-sm btn-outline-primary rounded mb-4' %>
     </div>
 
     <div class='col-sm-12 col-lg-5'>
@@ -51,7 +51,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h3 class="modal-title" id="sellTicketModalLabel">Sell</h3>
+          <h3 class="modal-title" id="sellTicketModalLabel">Vender</h3>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -66,7 +66,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h3 class="modal-title" id="buyTicketModalLabel">Buy</h3>
+          <h3 class="modal-title" id="buyTicketModalLabel">Comprar</h3>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
