--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -2,8 +2,8 @@
   <div class="row py-4">
     <div class="col-md-3"><%= image_tag @order.teddy.photo_url, width: '100%' %></div>
     <div class="col">
-      <h1>Checkout summary</h1>
-      <p>Purchase of <strong><%= @order.teddy.name %></strong> for <strong><%= humanized_money_with_symbol @order.amount %></strong></p>
+      <h1>Checkout</h1>
+      <p>Compra de <strong><%= @order.teddy.name %></strong> for <strong><%= humanized_money_with_symbol @order.amount %></strong></p>
       <button id="pay" class="btn btn-primary">Pay</button>
       <script src="https://js.stripe.com/v3/"></script>
       <script>
