--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,9 +15,9 @@
         <%= text_field_tag :query,
             params[:query],
             class: "search form-control",
-            placeholder: "Type something..."
+            placeholder: "Digite algo..."
         %>
-      <%= submit_tag "Search", name: "", class: "search-btn btn btn-success" %>
+      <%= submit_tag "Buscar", name: "", class: "search-btn btn btn-success" %>
       <% end %>
     </div>
     </div>
@@ -39,10 +39,10 @@
             <% end %>
           </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Events", my_events_path, class: "dropdown-item" %>
+              <%= link_to "Eventos", my_events_path, class: "dropdown-item" %>
+              <%= link_to "Pedidos", orders_path, class: "dropdown-item" %>
+              <%= link_to "Perfil", user_path(current_user), class: "dropdown-item" %>
               <%= link_to "Tickets", tickets_path, class: "dropdown-item" %>
-              <%= link_to "Orders", orders_path, class: "dropdown-item" %>
-              <%= link_to "Profile", user_path(current_user), class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
           </li>
