--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -6,7 +6,7 @@
     <% if @tickets.present? %>
       <%= render @tickets %>
     <% else %>
-      <p>No tickets available.</p>
+      <p>Nenhum ticket disponível</p>
     <% end %>
   </div>
 </div>
