--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,14 @@
 <div>
-  <h1>User Profile</h1>
-  <p><strong>Name:</strong> <%= @user.name %></p>
+  <h1>Perfil do Usuário</h1>
+  <p><strong>Nome:</strong> <%= @user.name %></p>
   <p><strong>Email:</strong> <%= @user.email %></p>
   <% if @user.company %>
-    <p><strong>Type:</strong> Company</p>
+    <p><strong>Tipo:</strong> Empresa</p>
   <% else %>
-    <p><strong>Type:</strong> Individual</p>
+    <p><strong>Tipo:</strong> Individual</p>
   <% end %>
 </div>
 
 <div>
-  <%= link_to "Edit profile", edit_user_registration_path, class: 'my_events-btn btn-outline-primary rounded' %>
+  <%= link_to "Editar perfil", edit_user_registration_path, class: 'my_events-btn btn-outline-primary rounded' %>
 </div>
