Deletar posts e comentários

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,6 +3,7 @@
 @import "avatar";
 @import "banner";
 @import "card";
+@import "comment";
 @import "form_legend_clear";
 @import "grid";
 @import "navbar";
