--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -24,7 +24,7 @@
       <div class='d-flex justify-content-between mt-3'>
         <div>
           <div class='d-flex align-items-baseline'>
-            <p class='h4 fw-semibold'><%= @event.title %></p>
+            <h3><%= @event.title %></h3>
           </div>
         </div>
         <div>
@@ -32,11 +32,55 @@
         </div>
       </div>
 
-        <p class='fw-semibold'>Host: <%= @event.user.name %></p>
-        <p class='h6 fw-semibold'>Location: <%= @event.location %></p>
+        <p class='h5 fw-semibold'>Host: <%= @event.user.name %></p>
+        <p class='h6'>Location: <%= @event.location %></p>
         <p><%= @event.description %></p>
 
-        <%= link_to 'Back to events', events_path, class: 'btn btn-sm btn-outline-primary rounded mb-4' %>
+        <!-- Forum -->
+          <div class="mt-5">
+            <h3>Fórum</h3>
+
+            <!-- Display Posts -->
+            <% @event.posts.order(created_at: :desc).each do |post| %>
+              <div class="card mt-3">
+                <div class="card-body">
+                  <p class='mb-1'><strong><%= post.user.email %></strong></p>
+                  <p class="card-text"><%= post.content %></p>
+                  <!-- Comments -->
+                  <% post.comments.order(created_at: :asc).each do |comment| %>
+                    <div class="mt-2 ms-3">
+                      <p class='mb-1'><strong><%= comment.user.email %>:</strong></p>
+                      <div class="d-flex">
+                        <p><%= comment.content %></p>
+                        <% if comment.user == current_user %>
+                          <p><%= link_to "Deletar", event_post_comment_path(@event, post, comment), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'delete-comment text-danger' %></p>
+                        <% end %>
+                      </div>
+                    </div>
+                  <% end %>
+                  <!-- Add Comment -->
+                  <div class="d-flex justify-content-between">
+                    <%= link_to 'Comment', new_event_post_comment_path(@event, post), class: 'btn btn-sm btn-outline-primary' %>
+                    <% if post.user == current_user %>
+                      <%= link_to "Deletar post", event_post_path(@event, post), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'btn btn-sm btn-outline-danger rounded' %>
+                    <% end %>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+
+
+            <!-- New Post -->
+            <%= simple_form_for [@event, @post] do |f| %>
+              <div class="form-group mt-3">
+                <%= f.input :content, as: :text, label: false, input_html: { class: 'form-control' } %>
+              </div>
+              <div class="text-end d-flex justify-content-between mb-4">
+                <%= link_to 'Back to events', events_path, class: 'btn btn-sm btn-outline-primary' %>
+                <%= f.button :submit, 'Post', class: 'btn btn-sm btn-primary' %>
+              </div>
+            <% end %>
+          </div>
     </div>
 
     <div class='col-sm-12 col-lg-5'>
