--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -32,8 +32,8 @@
         </div>
       </div>
 
-        <p class='h5 fw-semibold'>Host: <%= @event.user.name %></p>
-        <p class='h6'>Location: <%= @event.location %></p>
+        <p class='h5'><%= @event.user.name %></p>
+        <p><%= @event.location %></p>
         <p><%= @event.description %></p>
 
         <!-- Forum -->
