--- a/app/views/tickets/edit_images.html.erb
+++ b/app/views/tickets/edit_images.html.erb
@@ -1,16 +1,25 @@
-<h2>Upload your tickets</h2>
+<div class="container mt-5">
+  <h2 class="mb-4">Envie seus tickets</h2>
 
-<%= simple_form_for :tickets, url: update_images_tickets_path, method: :patch, html: { multipart: true } do |f| %>
-  <% @tickets.each do |ticket| %>
-    <div class="ticket">
-      <%= f.simple_fields_for :tickets, ticket do |ticket_form| %>
-        <div class="form-group">
-          <%= ticket_form.input :image, as: :file, label: "Upload image for Ticket #{ticket.ticket_type}", input_html: { accept: 'image/*' } %>
+  <%= simple_form_for :tickets, url: update_images_tickets_path, method: :patch, html: { multipart: true, class: 'needs-validation', novalidate: true } do |f| %>
+    <div class="row">
+      <% @tickets.each do |ticket| %>
+        <div class="col-md-6 mb-3">
+          <div class="card">
+            <div class="card-body">
+              <%= f.simple_fields_for :tickets, ticket do |ticket_form| %>
+                <div class="form-group">
+                  <%= ticket_form.input :image, as: :file, label: "Ticket #{ticket.ticket_type}", input_html: { accept: 'image/*', class: 'form-control' } %>
+                </div>
+              <% end %>
+            </div>
+          </div>
         </div>
       <% end %>
     </div>
-    <hr>
-  <% end %>
 
-  <%= f.submit 'Upload Images', class: 'btn btn-primary' %>
-<% end %>
+    <div class="text-center mt-4">
+      <%= f.submit 'Enviar arquivos', class: 'btn btn-primary' %>
+    </div>
+  <% end %>
+</div>
