--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,8 +3,8 @@
 @import "avatar";
 @import "banner";
 @import "card";
-@import "comment";
 @import "form_legend_clear";
+@import "forum";
 @import "grid";
 @import "navbar";
 @import "ticket";
