--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -42,27 +42,45 @@
 
             <!-- Display Posts -->
             <% @event.posts.order(created_at: :desc).each do |post| %>
-              <div class="card mt-3">
-                <div class="card-body">
-                  <p class='mb-1'><strong><%= post.user.email %></strong></p>
-                  <p class="card-text"><%= post.content %></p>
+              <div class="mt-3">
+                <div class="forum-card">
+                  <div class="d-flex">
+                    <% if post.user.photo.attached? %>
+                      <%= cl_image_tag comment.user.photo.key, widht: 30, class: 'forum-avatar', crop: :fill %>
+                    <% else %>
+                      <%= image_tag "avatar.svg", width: 30, class: 'me-2'  %>
+                    <% end %>
+                    <div>
+                      <p class='forum-user'><%= post.user.email %></p>
+                      <p class='forum-text'><%= post.content %></p>
+                    </div>
+                  </div>
                   <!-- Comments -->
                   <% post.comments.order(created_at: :asc).each do |comment| %>
-                    <div class="mt-2 ms-3">
-                      <p class='mb-1'><strong><%= comment.user.email %>:</strong></p>
+                    <div class="mt-2 forum-comment">
                       <div class="d-flex">
-                        <p><%= comment.content %></p>
-                        <% if comment.user == current_user %>
-                          <p><%= link_to "Deletar", event_post_comment_path(@event, post, comment), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'delete-comment text-danger' %></p>
+                        <% if comment.user.photo.attached? %>
+                          <%= cl_image_tag comment.user.photo.key, widht: 30, class: 'forum-avatar', crop: :fill %>
+                        <% else %>
+                          <%= image_tag "avatar.svg", width: 30, class: 'me-2'  %>
                         <% end %>
+                          <div>
+                            <p class='forum-user'><%= comment.user.email %>:</p>
+                            <div class="d-flex align-items-center">
+                              <p class='forum-text'><%= comment.content %></p>
+                              <% if comment.user == current_user %>
+                                <%= link_to "Deletar", event_post_comment_path(@event, post, comment), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'delete-comment text-danger' %>
+                              <% end %>
+                            </div>
+                          </div>
                       </div>
                     </div>
                   <% end %>
                   <!-- Add Comment -->
                   <div class="d-flex justify-content-between">
-                    <%= link_to 'Comment', new_event_post_comment_path(@event, post), class: 'btn btn-sm btn-outline-primary' %>
+                    <%= link_to 'Comment', new_event_post_comment_path(@event, post), class: 'btn btn-sm btn-outline-primary mt-3' %>
                     <% if post.user == current_user %>
-                      <%= link_to "Deletar post", event_post_path(@event, post), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'btn btn-sm btn-outline-danger rounded' %>
+                      <%= link_to "Deletar post", event_post_path(@event, post), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'btn btn-sm btn-outline-danger mt-3' %>
                     <% end %>
                   </div>
                 </div>
@@ -73,7 +91,7 @@
             <!-- New Post -->
             <%= simple_form_for [@event, @post] do |f| %>
               <div class="form-group mt-3">
-                <%= f.input :content, as: :text, label: false, input_html: { class: 'form-control' } %>
+                <%= f.input :content, as: :text, label: false, input_html: { class: 'form-control bg-white' } %>
               </div>
               <div class="text-end d-flex justify-content-between mb-4">
                 <%= link_to 'Voltar aos eventos', events_path, class: 'btn btn-sm btn-outline-primary' %>
