--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -35,7 +35,7 @@
             <% if current_user.photo.attached? %>
               <%= cl_image_tag current_user.photo.key, width: 40, height: 40, crop: :thumb, gravity: :face, class: "avatar", alt: "dropdown menu" %>
             <% else %>
-              <%= image_tag "avatar.png", class: "avatar", alt: "dropdown menu"  %>
+              <%= image_tag "avatar.svg", class: "avatar", alt: "dropdown menu"  %>
             <% end %>
           </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
