--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,37 +1,63 @@
-<div class="container">
-  <h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container py-5">
+  <div class="row">
+    <div class="col-12 col-md-8 col-lg-6 mx-auto">
+      <div class="bg-white rounded p-4 shadow-sm">
+        <h2 class="mb-4 text-center">Editar <%= resource_name.to_s.humanize %></h2>
 
-  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    <%= f.error_notification %>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+          <%= f.error_notification %>
 
-    <div class="form-inputs">
-      <%= f.input :email, required: true, autofocus: true %>
+          <div class="form-inputs">
+            <div class="form-group">
+              <%= f.input :email, required: true, autofocus: true, label: "Email", input_html: { class: 'form-control' } %>
+            </div>
 
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-      <% end %>
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+              <p class="text-warning">Aguardando confirmação para: <strong><%= resource.unconfirmed_email %></strong></p>
+            <% end %>
 
-      <%= f.input :password,
-                  hint: "leave it blank if you don't want to change it",
-                  required: false,
-                  input_html: { autocomplete: "new-password" } %>
-      <%= f.input :password_confirmation,
-                  required: false,
-                  input_html: { autocomplete: "new-password" } %>
-      <%= f.input :current_password,
-                  hint: "we need your current password to confirm your changes",
-                  required: true,
-                  input_html: { autocomplete: "current-password" } %>
+            <div class="form-group">
+              <%= f.input :password,
+                          label: "Senha",
+                          hint: "Deixe em branco caso não deseje alterar",
+                          required: false,
+                          input_html: { class: 'form-control', autocomplete: "new-password" } %>
+            </div>
+
+            <div class="form-group">
+              <%= f.input :password_confirmation,
+                          label: "Confirmação da Senha",
+                          required: false,
+                          input_html: { class: 'form-control', autocomplete: "new-password" } %>
+            </div>
+
+            <div class="form-group">
+              <%= f.input :current_password,
+                          label: "Senha Atual",
+                          hint: "Precisamos de sua senha atual para alterar as informações",
+                          required: true,
+                          input_html: { class: 'form-control', autocomplete: "current-password" } %>
+            </div>
+          </div>
+
+          <div class="form-actions text-center">
+            <%= f.button :submit, "Atualizar", class: 'btn btn-primary w-100' %>
+          </div>
+        <% end %>
+
+        <h5 class="m-4 text-center">Cancelar conta</h5>
+        <div class="text-center">
+          <%= button_to "Cancelar minha conta",
+                        registration_path(resource_name),
+                        class: 'btn btn-danger',
+                        data: { confirm: "Tem certeza?", turbo_confirm: "Tem certeza?" },
+                        method: :delete %>
+        </div>
+
+        <div class="text-center mt-3">
+          <%= link_to "Voltar", :back, class: 'btn btn-link' %>
+        </div>
+      </div>
     </div>
-
-    <div class="form-actions">
-      <%= f.button :submit, "Update" %>
-    </div>
-  <% end %>
-
-  <h3>Cancel my account</h3>
-
-  <div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-  <%= link_to "Back", :back %>
+  </div>
 </div>
