--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12 col-md-8 col-lg-6 mx-auto">
       <div class="bg-white rounded p-4 shadow-sm">
-        <h2 class="mb-4 text-center">Sign up</h2>
+        <h2 class="mb-4 text-center">Inscrever-se</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
@@ -22,7 +22,7 @@
   </div>
 
     <div class="form-actions text-center">
-      <%= f.button :submit, "Sign up", class: 'my_events btn-dark' %>
+      <%= f.button :submit, "Criar uma conta", class: 'my_events btn-dark' %>
     </div>
   </div>
 
