--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,29 +1,40 @@
+<!-- app/views/layouts/application.html.erb -->
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
 
-  <%= link_to events_path, class: "navbar-brand" do %>
+    <!-- Logo e Links -->
+    <%= link_to events_path, class: "navbar-brand" do %>
       <%= image_tag "logo.svg" %>
     <% end %>
 
-
+    <!-- Botão de Toggle para Navegação em Tela Pequena -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="row justify-content-center">
-    <div class="col-sm-8 my-3">
-      <%= form_with url: events_path, method: :get, class: "d-flex" do %>
-        <%= text_field_tag :query,
-            params[:query],
-            class: "search form-control",
-            placeholder: "Digite algo..."
-        %>
-      <%= submit_tag "Buscar", name: "", class: "search-btn btn btn-success" %>
-      <% end %>
-    </div>
-    </div>
 
+    <!-- Conteúdo da Navbar -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
+      <!-- Formulário de Pesquisa e Filtro -->
+      <div class="d-flex w-100 my-3 justify-content-center">
+        <%= form_with url: events_path, method: :get, class: "d-flex w-100" do %>
+          <div class="input-group">
+            <!-- Campo de Pesquisa por Título -->
+            <%= text_field_tag :query, params[:query], class: "form-control me-2", placeholder: "Digite algo..." %>
+
+            <!-- Campo de Filtro por Localização -->
+            <%= text_field_tag :location, params[:location], class: "form-control me-2", placeholder: "Localização" %>
+
+            <!-- Campo de Filtro por Data -->
+            <%= text_field_tag :date, params[:date], class: "form-control me-2", placeholder: "Data", type: "date" %>
+
+            <!-- Botão de Envio -->
+            <%= submit_tag "Buscar", name: "", class: "btn btn-success" %>
+          </div>
+        <% end %>
+      </div>
+
+      <!-- Links de Navegação -->
+      <ul class="navbar-nav ms-auto">
         <% if user_signed_in? %>
           <li class="nav-item active">
             <div class='nav-link'>
@@ -31,19 +42,19 @@
             </div>
           </li>
           <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <% if current_user.photo.attached? %>
-              <%= cl_image_tag current_user.photo.key, width: 40, height: 40, crop: :thumb, gravity: :face, class: "avatar", alt: "dropdown menu" %>
-            <% else %>
-              <%= image_tag "avatar.png", class: "avatar", alt: "dropdown menu"  %>
-            <% end %>
-          </a>
+            <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <% if current_user.photo.attached? %>
+                <%= cl_image_tag current_user.photo.key, width: 40, height: 40, crop: :thumb, gravity: :face, class: "avatar", alt: "dropdown menu" %>
+              <% else %>
+                <%= image_tag "avatar.png", class: "avatar", alt: "dropdown menu" %>
+              <% end %>
+            </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Eventos", my_events_path, class: "dropdown-item" %>
               <%= link_to "Pedidos", orders_path, class: "dropdown-item" %>
               <%= link_to "Perfil", user_path(current_user), class: "dropdown-item" %>
               <%= link_to "Tickets", tickets_path, class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+              <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
             </div>
           </li>
         <% else %>
