--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     <%= render "shared/flashes" %>
     <%# <div class="container"> %>
       <%= yield %>
+    <%= render "shared/footer" %>
     <%# </div> %>
   </body>
 </html>
