--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,30 +1,31 @@
 <div class="container">
-  <h1 class='mb-3'>Orders</h1>
+  <h1 class='mb-3'>Pedidos</h1>
 
-  <% if @orders.present? %>
-    <% @orders.each do |event, orders| %>
-    <div class="grid-item">
-      <div class='card-content'>
-      <div class='d-flex justify-content-between align-items-center'>
-        <h2><%= event.title %></h2>
-        <p><%= event.date.strftime("%d-%m-%Y") %></p>
+  <div class="d-flex">
+    <% if @orders.present? %>
+      <% @orders.each do |event, orders| %>
+      <div class="grid-item">
+        <div class='card-content'>
+        <div class='d-flex justify-content-between align-items-center'>
+          <h2><%= event.title %></h2>
+          <p><%= event.date.strftime("%d-%m-%Y") %></p>
+        </div>
+          <p class='mt-1 mb-3'><%= event.location %></p>
+
+          <ol class='ps-0'>
+            <% orders.each do |order| %>
+              <li class='d-flex align-items-center'>
+                ● <strong class='mt-0 ms-2'> <%= order.ticket.ticket_type %> - <%= humanized_money_with_symbol(order.ticket.price) %></strong>
+                <%= link_to 'Remover', order_path(order), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'ms-3' %>
+              </li>
+            <% end %>
+          </ol>
+        </div>
       </div>
-        <p class='mt-1 mb-3'><%= event.location %></p>
+      <% end %>
+  </div>
 
-        <ol class='ps-0'>
-          <% orders.each do |order| %>
-            <li class='d-flex align-items-center'>
-              ● <strong class='mt-0 ms-2'> <%= order.ticket.ticket_type %> - <%= humanized_money_with_symbol(order.ticket.price) %></strong>
-              <%= link_to 'Remover', order_path(order), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'ms-3' %>
-            </li>
-          <% end %>
-        </ol>
-      </div>
-    </div>
-
-    <% end %>
-
-    <h3>Total Price: <%= humanized_money_with_symbol(@total_price) %></h3>
+    <h3>Preço Total: <%= humanized_money_with_symbol(@total_price) %></h3>
 
     <%= form_with url: create_checkout_session_path, data: { turbo_method: :post, turbo: false }, local: true do %>
       <%= submit_tag 'Checkout', class: 'btn btn-primary mt-3' %>
