--- a/app/views/tickets/_ticket.html.erb
+++ b/app/views/tickets/_ticket.html.erb
@@ -4,9 +4,9 @@
     <%= cl_image_tag(ticket.event.photo.key, crop: :fill) %>
     <div class="card-ticket-infos">
       <h2><%= ticket.event.title %></h2>
-      <p>Data: <strong><%= ticket.event.date.strftime("%d-%m-%Y") %></strong> <i class="fa-regular fa-file" style="color: #000000;"></i></p>
-      <p>Tipo: <strong><%= ticket.ticket_type %></strong></p>
-      <p>Preço`: <strong><%= humanized_money_with_symbol(ticket.price) %></strong></p>
+      <p>Data: <strong><%= ticket.event.date.strftime("%d-%m-%Y") %></strong></p>
+      <p>Tipo: <strong><%= ticket.ticket_type %></strong> <i class="fa-regular fa-file" style="color: #000000;"></i></p>
+      <p>Preço: <strong><%= humanized_money_with_symbol(ticket.price) %></strong></p>
       <% if ticket.available %>
         <%= simple_form_for ticket do |f| %>
           <%= f.input :available, :as => :hidden, :input_html => { :value => !ticket.available } %>
