--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -44,16 +44,21 @@
             <% @event.posts.order(created_at: :desc).each do |post| %>
               <div class="mt-3">
                 <div class="forum-card">
-                  <div class="d-flex">
-                    <% if post.user.photo.attached? %>
-                      <%= cl_image_tag comment.user.photo.key, widht: 30, class: 'forum-avatar', crop: :fill %>
-                    <% else %>
-                      <%= image_tag "avatar.svg", width: 30, class: 'me-2'  %>
-                    <% end %>
-                    <div>
-                      <p class='forum-user'><%= post.user.email %></p>
-                      <p class='forum-text'><%= post.content %></p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class='d-flex'>
+                      <% if post.user.photo.attached? %>
+                        <%= cl_image_tag comment.user.photo.key, widht: 30, class: 'forum-avatar', crop: :fill %>
+                      <% else %>
+                        <%= image_tag "avatar.svg", width: 30, class: 'me-2'  %>
+                      <% end %>
+                      <div>
+                        <p class='forum-user'><%= post.user.email %></p>
+                        <p class='forum-text'><%= post.content %></p>
+                      </div>
                     </div>
+                      <% if post.user == current_user %>
+                        <%= link_to "Deletar post", event_post_path(@event, post), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'btn btn-sm btn-outline-danger' %>
+                      <% end %>
                   </div>
                   <!-- Comments -->
                   <% post.comments.order(created_at: :asc).each do |comment| %>
@@ -77,21 +82,22 @@
                     </div>
                   <% end %>
                   <!-- Add Comment -->
-                  <div class="d-flex justify-content-between">
-                    <%= link_to 'Comment', new_event_post_comment_path(@event, post), class: 'btn btn-sm btn-outline-primary mt-3' %>
-                    <% if post.user == current_user %>
-                      <%= link_to "Deletar post", event_post_path(@event, post), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'btn btn-sm btn-outline-danger mt-3' %>
-                    <% end %>
-                  </div>
+                  <% if user_signed_in? %>
+                    <div class="mt-3">
+                      <%= simple_form_for [@event, post, post.comments.new], html: { class: 'form-inline' } do |f| %>
+                        <%= f.input :content, as: :string, label: false, input_html: { class: 'form-control bg-white forum-input', placeholder: 'Adicione um comentário...' } %>
+                        <%= f.button :submit, 'Comment', class: 'btn btn-sm btn-outline-primary d-none' %>
+                      <% end %>
+                    </div>
+                  <% end %>
                 </div>
               </div>
             <% end %>
 
-
             <!-- New Post -->
             <%= simple_form_for [@event, @post] do |f| %>
               <div class="form-group mt-3">
-                <%= f.input :content, as: :text, label: false, input_html: { class: 'form-control bg-white' } %>
+                <%= f.input :content, as: :text, label: false, input_html: { class: 'form-control bg-white', placeholder: 'Novo post...' } %>
               </div>
               <div class="text-end d-flex justify-content-between mb-4">
                 <%= link_to 'Voltar aos eventos', events_path, class: 'btn btn-sm btn-outline-primary' %>
