--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,39 +1,28 @@
-<!-- app/views/layouts/application.html.erb -->
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
 
-    <!-- Logo e Links -->
     <%= link_to events_path, class: "navbar-brand" do %>
       <%= image_tag "logo.svg" %>
     <% end %>
 
-    <!-- Botão de Toggle para Navegação em Tela Pequena -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <!-- Conteúdo da Navbar -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <!-- Formulário de Pesquisa e Filtro -->
-      <div class="d-flex w-100 my-3 justify-content-center">
+      <div class="mx-auto">
         <%= form_with url: events_path, method: :get, class: "d-flex w-100" do %>
           <div class="input-group">
-            <!-- Campo de Pesquisa por Título -->
-            <%= text_field_tag :query, params[:query], class: "form-control me-2", placeholder: "Digite algo..." %>
 
-            <!-- Campo de Filtro por Localização -->
-            <%= text_field_tag :location, params[:location], class: "form-control me-2", placeholder: "Localização" %>
+            <%= text_field_tag :query, params[:query], class: "form-control me-2", placeholder: "Nome do evento..." %>
+            <%= text_field_tag :location, params[:location], class: "form-control me-2", placeholder: "Localização..." %>
+            <%= text_field_tag :date, params[:date], class: "form-control me-2", placeholder: "Data...", type: "date" %>
 
-            <!-- Campo de Filtro por Data -->
-            <%= text_field_tag :date, params[:date], class: "form-control me-2", placeholder: "Data", type: "date" %>
-
-            <!-- Botão de Envio -->
-            <%= submit_tag "Buscar", name: "", class: "btn btn-success" %>
+            <%= submit_tag "Buscar", name: "", class: "my_events-btn btn-success" %>
           </div>
         <% end %>
       </div>
 
-      <!-- Links de Navegação -->
       <ul class="navbar-nav ms-auto">
         <% if user_signed_in? %>
           <li class="nav-item active">
@@ -42,13 +31,13 @@
             </div>
           </li>
           <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <% if current_user.photo.attached? %>
-              <%= cl_image_tag current_user.photo.key, width: 40, height: 40, crop: :thumb, gravity: :face, class: "avatar", alt: "dropdown menu" %>
-            <% else %>
-              <%= image_tag "avatar.svg", class: "avatar", alt: "dropdown menu"  %>
-            <% end %>
-          </a>
+            <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <% if current_user.photo.attached? %>
+                <%= cl_image_tag current_user.photo.key, width: 40, height: 40, crop: :thumb, gravity: :face, class: "avatar", alt: "dropdown menu" %>
+              <% else %>
+                <%= image_tag "avatar.svg", class: "avatar", alt: "dropdown menu"  %>
+              <% end %>
+            </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Eventos", my_events_path, class: "dropdown-item" %>
               <%= link_to "Pedidos", orders_path, class: "dropdown-item" %>
