--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,3 +3,10 @@
   background-position: center;
   padding: 150px 0;
 }
+
+.sticky-photo {
+  position: -webkit-sticky; /* For Safari */
+  position: sticky;
+  top: 100px; /* Adjust this value based on how you want the photo to be positioned when sticking */
+  z-index: 10; /* Ensure it's above other content */
+}
