turbo stream nos destroys

--- a/app/views/events/_comment.html.erb
+++ b/app/views/events/_comment.html.erb
@@ -1,4 +1,4 @@
-<div id="comment-<%= comment.id %>">
+<div id="<%= dom_id(comment) %>">
   <div class="mt-2 forum-comment">
     <div class="d-flex">
       <% if comment.user.photo.attached? %>
