--- a/app/views/events/_post.html.erb
+++ b/app/views/events/_post.html.erb
@@ -1,4 +1,4 @@
-<div id="post-<%= post.id %>">
+<div id="<%= dom_id(post) %>">
   <div class="mt-3">
     <div class="forum-card">
       <div class="d-flex justify-content-between align-items-center">
@@ -18,7 +18,7 @@
         <% end %>
       </div>
       <!-- Comments -->
-      <div id="comments-<%= post.id %>">
+      <div id="post_<%= post.id %>_comments">
         <% post.comments.order(created_at: :asc).each do |comment| %>
           <%= render "events/comment", comment: comment, post: post %>
         <% end %>
