--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,11 +10,11 @@
 }
 
 body {
-  margin-top: 100px; /* Pode ser ajustado conforme necessário */
+  margin-top: 100px;
 }
 
 .container {
-  margin-top: 100px; /* Pode ser ajustado conforme necessário */
+  margin-top: 100px;
 }
 
 .navbar-lewagon {
@@ -30,9 +30,33 @@ body {
   width: 40px;
 }
 
+.search-container {
+  background: white;
+  padding: 10px 15px;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  left: 35%;
+  transform: translateX(-35%);
+}
+
 .input-group {
-  width: auto; /* Ajusta a largura conforme necessário */
-  margin: 0 auto; /* Centraliza horizontalmente */
+  width: 100%;
+}
+
+.form-control.no-border {
+  background-color: transparent;
+  border: none;
+  border-radius: 0;
+  box-shadow: none;
+  align-items: center;
+  align-items: center;
+}
+
+.form-control {
+  margin: 0;
+  padding: 0.5rem;
 }
 
 .my_events-btn {
@@ -42,7 +66,7 @@ body {
   border: 1px solid #000000;
   color: #ffffff;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  margin-right: 20px;
+  margin-left: 10px;
   text-align: center;
   text-decoration: none;
   display: inline-flex;
@@ -53,6 +77,55 @@ body {
 
 .my_events-btn:hover {
   background-color: #FF7D26;
+  border: 1px solid #FF7D26;
+  color: #000000;
+}
+
+.search-btn {
+  width: 150px;
+  border-radius: 20px;
+  background: rgb(0, 0, 0);
+  border: 1px solid #000000;
+  color: #ffffff;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  margin-left: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s ease;
+  background-image: url('../images/Lupa.png');
+}
+
+.search-btn:hover {
+  background-color: #FF7D26;
+  background-image: url('../images/Lupa.png');
+  border: 1px solid #FF7D26;
+  color: #000000;
+}
+
+
+.field-btn {
+  width: 150px;
+  border-radius: 20px;
+  background: rgb(255, 255, 255);
+  border: 1px solid #ffffff;
+  color: #ffffff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  margin-left: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s ease;
+  background-image: url('../images/Lupa.png');
+}
+
+.field-btn:hover {
+  background-color: #ffffff;
+  background-image: url('../images/Lupa.png');
   border: 1px solid #FF7D26;
   color: #000000;
 }
