--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -34,7 +34,6 @@ body {
   background: white;
   padding: 10px 15px;
   border-radius: 15px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   align-items: center;
   left: 35%;
@@ -113,7 +112,7 @@ body {
   border: 1px solid #ffffff;
   color: #ffffff;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  margin-left: 10px;
+  margin-right: 2px;
   text-align: center;
   text-decoration: none;
   display: inline-flex;
