--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -3,7 +3,8 @@
   border-radius: 50%;
 }
 .avatar-large {
-  width: 56px;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
 }
 .avatar-bordered {
