--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,27 +3,35 @@
     <div class="col-12 col-md-8 col-lg-6 mx-auto">
       <div class="bg-white rounded p-4 shadow-sm">
         <h2 class="mb-4 text-center">Inscrever-se</h2>
+          <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+            <div class="form-inputs">
+              <%= f.input :name,
+                          autofocus: true,
+                          label: "Nome",
+                          input_html: { autocomplete: "name" }%>
+              <%= f.input :email,
+                          required: true,
+                          autofocus: true,
+                          label: "Email",
+                          input_html: { autocomplete: "email" }%>
+              <%= f.input :password,
+                          required: true,
+                          label: "Senha",
+                          hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                          input_html: { autocomplete: "new-password" } %>
+              <%= f.input :password_confirmation,
+                          required: true,
+                          label: "Confirmação da Senha",
+                          input_html: { autocomplete: "new-password" } %>
+            </div>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-  </div>
-
-    <div class="form-actions text-center">
-      <%= f.button :submit, "Criar uma conta", class: 'my_events btn-dark' %>
+            <div class="form-actions text-center">
+              <%= f.button :submit, "Criar uma conta", class: 'btn btn-primary w-100 mt-4' %>
+            </div>
+          <% end %>
+      </div>
     </div>
   </div>
-
-<% end %>
+</div>
