--- a/app/assets/stylesheets/components/_forum.scss
+++ b/app/assets/stylesheets/components/_forum.scss
@@ -1,7 +1,7 @@
 .forum-card {
   background-color: white;
   border-radius: 0px;
-  padding: 16px 16px 4px 16px;
+  padding: 16px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
